Rename files: - charge name of Xml and Java arquives, organizing the code hierarchy

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Integrakidsmobile" >
         <activity
-            android:name=".MainActivity2"
+            android:name=".MenuPrincipal"
             android:exported="false"
             android:label="@string/title_activity_menu_principal" />
         <activity
