API test Update: - add dependency Okhttp3; - active Internet Access in AndroidManifest.xml; - create API class, dependente and user service; - add Dev Mode in configurations (acessible only using Konami Code [not working yet]);

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,5 +52,6 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
