--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.16.0' // ambos para tratar o GIF de loading
     annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
 
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0' // graficos
+
 
 }
