--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,48 +12,65 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Integrakidsmobile" >
+        android:theme="@style/Theme.Integrakidsmobile">
+
+        <!-- AGORA ESTA É A PRINCIPAL -->
+        <activity
+            android:name=".ConexaoActivity"
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+
         <activity
             android:name=".profile.PerfilTrocarPlayer"
             android:exported="false" />
+
         <activity
             android:name=".profile.PerfilResultados"
             android:exported="false" />
+
         <activity
             android:name=".profile.PerfilEditKid"
             android:exported="false" />
+
         <activity
             android:name=".profile.PerfilCadKid"
             android:exported="false" />
+
         <activity
             android:name=".profile.PerfilEditCad"
             android:exported="false" />
+
         <activity
             android:name=".games.JogoNumeros"
             android:exported="false" />
+
         <activity
             android:name=".games.JogoVogais"
             android:exported="false" />
+
         <activity
             android:name=".games.JogoMemoria"
             android:exported="false" />
+
         <activity
             android:name=".games.JogoCores"
             android:exported="false" />
+
         <activity
             android:name=".MenuPrincipal"
             android:exported="false"
             android:label="@string/title_activity_menu_principal" />
+
         <activity
             android:name=".LoginCadastro"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
