API update [4/6]: - Resultados function OK: -> need create interface, add importation in gradle and other model to work;

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,8 @@ dependencies {
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0' // graficos
 
+    implementation 'com.google.code.gson:gson:2.10.1' // Gson para coletar resultados de partida
+
+
 
 }
