--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
         <!-- AGORA ESTA É A PRINCIPAL -->
         <activity
-            android:name=".ConexaoActivity"
+            android:name=".MenuPrincipal"
             android:exported="true">
 
             <intent-filter>
@@ -47,25 +47,27 @@
             android:exported="false" />
 
         <activity
-            android:name=".games.JogoNumeros"
+            android:name=".games.views.jogo_numeros.JogoNumeros"
             android:exported="false" />
 
         <activity
-            android:name=".games.JogoVogais"
+            android:name=".games.views.jogo_vogais.JogoVogais"
             android:exported="false" />
 
         <activity
-            android:name=".games.JogoMemoria"
+            android:name=".games.views.jogo_memoria.JogoMemoria"
             android:exported="false" />
 
         <activity
-            android:name=".games.JogoCores"
+            android:name=".games.views.jogo_cores.JogoCores"
             android:exported="false" />
 
+        <!--
         <activity
             android:name=".MenuPrincipal"
             android:exported="false"
             android:label="@string/title_activity_menu_principal" />
+        -->
 
         <activity
             android:name=".LoginCadastro"
